@@ -3,3 +3,4 @@
 * Implement the tag feature.
 * Implement groups for authors/administrators and the corresponding privileges.
 * Solve the problem of the relation between post and comment.
+* Use the Akismet to comment.
