@@ -86,6 +86,5 @@ INSTALLED_APPS = (
     'django.contrib.sites',
     'django.contrib.admin',
     'pulog',
-    'media',
     'tagging',
 )
